# hc-thermostat

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
.github/workflows/: release.yml
config/: config.toml.example
src/: bridge.rs  config.rs  control.rs  logging.rs  main.rs
tests/: config_tests.rs
