[package]
name        = "hc-thermostat"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Virtual thermostat plugin for homeCore — aggregates temperature sensors, applies hysteresis + short-cycle protection, drives an actuator device on/off"
repository  = "https://github.com/homeCore-io/hc-thermostat"

[[bin]]
name = "hc-thermostat"
path = "src/main.rs"

[dependencies]
plugin-sdk-rs      = { path = "../../sdks/hc-plugin-sdk-rs" }
hc-types           = { path = "../../core/crates/hc-types" }
hc-logging         = { path = "../../core/crates/hc-logging" }
tokio              = { version = "1",   features = ["full"] }
rumqttc            = "0.24"
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
notify             = "6"
chrono             = { version = "0.4", features = ["serde"] }
flate2             = "1"

[dev-dependencies]
tempfile = "3"

# Standalone repo — not part of the core workspace.
[workspace]

[profile.release]
strip = true
lto   = "thin"
